--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -1,1 +1,22 @@
 @import 'common/reset';
+
+html {
+  height: 100%;
+  min-height: 100%;
+}
+
+body {
+  height: 100%;
+  min-height: 100%;
+  font-family: Helvetica, sans-serif;
+}
+
+#app {
+  height: 100%;
+  min-height: 100%;
+}
+
+.shopping-cart {
+  height: 100%;
+  min-height: 100%;
+}
