--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -9,6 +9,7 @@ body {
   height: 100%;
   min-height: 100%;
   font-family: Helvetica, sans-serif;
+  -webkit-font-smoothing: antialiased;
 }
 
 #app {
